--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,27 @@
 			</exclusions>
 			<scope>runtime</scope>
 		</dependency>
+		
+		
+		
+		<dependency>
+			<groupId>io.github.yedaxia</groupId>
+			<artifactId>japidocs</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+			<version>4.1.4</version>
+		</dependency>
+		
+		<!-- JSONObject对象依赖的jar包 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.28</version>
+		</dependency>
 
 	</dependencies>
 
